--- a/src/ui/component/HeaderNoNav.html
+++ b/src/ui/component/HeaderNoNav.html
@@ -3,7 +3,7 @@
         <div class="header-global">
             <div class="header-logo">
                 <a href="https://www.gov.uk" title="Go to the GOV.UK homepage" id="logo" class="content">
-                    <img src="img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt="">
+                    <img src="{($req.app.locals.staticAssetRoot)}/img/gov.uk_logotype_crown_invert_trans.png" width="36" height="32" alt="">
                     GOV.UK
                 </a>
             </div>
