Making change to scss file to check purging of generated css file from CDN in perf - not intended for prod release

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -167,3 +167,7 @@ body:not(.js-enabled) {
 .no-margin-bottom.discite__property-item {
 	margin-bottom: 0;
 }
+
+.no-prod-deploy .test-selector {
+	font-display: auto;
+}
