--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -33,7 +33,7 @@
         <DisciteCourseActions cta={($constructCourseCallToAction(course, modifier))} {course} {modifier} {module} today={modifier === home ? new Date() : null} />
     </slot>
 
-    {#if modifier === "home" && booked === true}
+    {#if modifier === "home" && booked === true && course.getDateRanges()}
         <div class="discite__item--event">
             <div class="discite__item--main">
                 <h3 class="heading discite__heading"><a href="/courses/{course.id}" class="govuk-link">{bookedModule.moduleTitle}</a></h3>
