New line supported in question text

--- a/src/ui/assets/styles/components/_quiz.scss
+++ b/src/ui/assets/styles/components/_quiz.scss
@@ -79,6 +79,10 @@ img.supportingImage {
   margin: auto;
 }
 
+.newLines {
+  white-space: pre-line;
+}
+
 .question-page .column-half table th, .question-page .column-half table td {
   border-bottom: none;
 }
