--- a/src/ui/component/QuizQuestion.html
+++ b/src/ui/component/QuizQuestion.html
@@ -1,7 +1,7 @@
 <div class="answers">
     <div class="question-contents">
         <h1><strong>{question.theme}</strong></h1>
-        <p>{question.value}</p>
+        <p class="newLines">{question.value}</p>
         {#if multipleAnswers}
         <p><strong>Select all correct answers</strong></p>
         {:else}
