--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -1,5 +1,5 @@
 <aside role="complementary">
-    <input type="checkbox" id="hide-filter" class="hide-filters" aria-hidden="true"/>
+    <input type="checkbox" id="hide-filter" class="hide-filters"/>
     <label class="filter-label" for="hide-filter">search filters</label>
     <form class="filter-form" autocomplete="off" name="searchLearning" method="get" action="/search">
         <input type="hidden" id="query" name="q" value="{ query }" />
