--- a/src/ui/component/Layout.html
+++ b/src/ui/component/Layout.html
@@ -1,4 +1,4 @@
-<main class="elements-index" id="content" role="main" tabindex="-1">
+<main class="elements-index" id="content" role="main">
 	<div class="main-content">
 		<slot></slot>
 	</div>
