--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -8,7 +8,7 @@
         <div class="lpg-related-items form-group govuk-related-items--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Learning type</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Learning type</h2>
                 </legend>
                 {#each Object.entries($i18n('courseTypes')) as filter}
                     <div class="multiple-choice">
@@ -23,7 +23,7 @@
             <fieldset>
 
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Cost</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Cost</h2>
                 </legend>
 
                 <div class="multiple-choice">
@@ -36,7 +36,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Your department</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Your department</h2>
                 </legend>
                 {#each departments.yours as filter}
                 <div class="multiple-choice">
@@ -50,7 +50,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Other departments</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Other departments</h2>
                 </legend>
                 {#each departments.other as filter}
                 <div class="multiple-choice">
@@ -64,7 +64,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Your areas of work</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Your areas of work</h2>
                 </legend>
                 {#each areasOfWork.yours as filter}
                 <div class="multiple-choice">
@@ -78,7 +78,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Other areas of work</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Other areas of work</h2>
                 </legend>
                 {#each areasOfWork.other as filter}
                 <div class="multiple-choice">
@@ -92,7 +92,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Your interests</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Your interests</h2>
                 </legend>
                 {#each interests.yours as filter}
                 <div class="multiple-choice">
@@ -106,7 +106,7 @@
         <div class="lpg-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle">
             <fieldset>
                 <legend>
-                    <h2 class="govuk-related-items__heading heading-small filter-headings">Other interests</h2>
+                    <h2 class="govuk-related-items__heading heading-small filter-headings" tabindex="0">Other interests</h2>
                 </legend>
                 {#each interests.other as filter}
                 <div class="multiple-choice">
