--- a/src/ui/assets/styles/components/_govuk-related-items.scss
+++ b/src/ui/assets/styles/components/_govuk-related-items.scss
@@ -1,10 +1,15 @@
 .lpg-related-items {
 	margin-top: $gutter;
-	border: 1px solid $alt-color;
+	border-bottom: 1px solid #b1b4b6;
 	border-top: 10px solid $civil-service;
 	padding-top: 5px;
 	padding-left: 8px;
 	padding-right: 8px;
+
+	//.gds {
+	//	border: none;
+	//	border-bottom: 1px solid #b1b4b6;
+	//}
 
 	&:first-of-type {
 		margin-top: 0;
