--- a/src/ui/assets/styles/components/_leftSearchBox.scss
+++ b/src/ui/assets/styles/components/_leftSearchBox.scss
@@ -2,15 +2,13 @@
 	clear: left;
 
 	legend {
-		padding-left: 8px;
+		//padding-left: 8px;
 		padding-right: 8px;
 
 		font-weight: bold;
 		//background: $alt-color;
 		width: 100%;
 	}
-
-
 
 	div.multiple-choice {
 		padding: 2px 0px 6px 0px;
@@ -21,42 +19,23 @@
 		width: 100%;
 
         input {
-            margin-left: 8px;
+            //margin-left: 8px;
         }
 
 		label {
 			margin-left: 45px;
-			&:before {
-				left: 8px;
-			}
-			&:after {
-				left: 16px;
-			}
 		}
 	}
+}
 
-	div.multiple-choice-gds {
-		padding: 2px 0px 6px 0px;
-		margin-top: 8px;
-
-		margin-bottom: 0px;
-		//border-bottom: 1px solid $alt-color;
-		width: 100%;
-
-		input {
-			margin-left: 8px;
-		}
-
-		label {
-			margin-left: 45px;
-			&:before {
-				left: 8px;
-			}
-			&:after {
-				left: 16px;
-			}
-		}
+@media (min-width: 641px) {
+	.form-group {
+		margin-bottom: 20px;
 	}
+}
+
+.lpg-related-items {
+	margin-top: 20px !important;
 }
 
 .filters {
@@ -95,7 +74,7 @@
 	clear: left;
 	width: 100%;
 	//margin: 10px 0;
-	margin: 20px 0px 30px 10px;
+	margin: 20px 0px 30px 0px;
 }
 
 .hide-filters {
@@ -140,3 +119,6 @@
 .hide-filters:checked ~ .filter-form {
 	display: block;
 }
+
+
+
