--- a/src/ui/assets/styles/components/_accessible-auto-complete.scss
+++ b/src/ui/assets/styles/components/_accessible-auto-complete.scss
@@ -1,129 +1,1 @@
-%inputBox {
-	-webkit-appearance: none;
-	border: 2px solid;
-	border-radius: 0; /* Safari 10 on iOS adds implicit border rounding. */
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	margin-bottom: 0; /* BUG: Safari 10 on macOS seems to add an implicit margin. */
-	width: 100%;
-	padding: 4px;
-}
-%inputTypography {
-	line-height: 1.25;
-	font-size: 16px;
-	@media (min-width: 641px) {
-		font-size: 19px;
-		line-height: 1.31579;
-	}
-}
-%inputHighlight {
-	background-color: #005ea5 !important;
-	border-color: #005ea5 !important;
-	color: white !important;
-	outline: none;
-}
-
-.autocomplete {
-	@include e(wrapper) {
-		position: relative;
-	}
-
-	@include e(hint) {
-		@extend %inputBox;
-		@extend %inputTypography;
-		color: #bfc1c3;
-		position: absolute;
-	}
-	@include e(input) {
-		@extend %inputBox;
-		@extend %inputTypography;
-		background-color: transparent;
-		position: relative;
-		@include m(default) {
-			padding: 4px;
-		}
-		@include m(focused) {
-			outline-offset: 0;
-			outline: 3px solid $focus;
-		}
-		@include m(show-all-values) {
-			padding: 4px 34px 4px 4px;
-			cursor: pointer;
-		}
-	}
-
-	@include e(dropdown-arrow-down) {
-		z-index: -1;
-		display: inline-block;
-		position: absolute;
-		right: 8px;
-		width: 24px;
-		height: 24px;
-		top: 10px;
-	}
-
-	@include e(menu) {
-		background-color: #fff;
-		border: 2px solid #0b0c0c;
-		border-top: 0;
-		color: #34384b;
-		margin: 0;
-		max-height: 342px;
-		overflow-x: hidden;
-		padding: 0;
-		width: calc(100% - 4px);
-
-		@include m(visible) {
-			display: block;
-		}
-
-		@include m(hidden) {
-			display: none;
-		}
-		@include m(overlay) {
-			box-shadow: rgba(0, 0, 0, 0.256863) 0px 2px 6px;
-			left: 0;
-			position: absolute;
-			top: 100%;
-			z-index: 100;
-		}
-		@include m(inline) {
-			position: relative;
-		}
-	}
-
-	@include e(option) {
-		@extend %inputTypography;
-		border-bottom: solid #bfc1c3;
-		border-width: 1px 0;
-		cursor: pointer;
-		display: block;
-		position: relative;
-
-		&:hover {
-			@extend %inputHighlight;
-		}
-		> * {
-			pointer-events: none;
-		}
-		&:first-of-type {
-			border-top-width: 0;
-		}
-		&:last-of-type {
-			border-bottom-width: 0;
-		}
-		@include m(odd) {
-			background-color: #fafafa;
-		}
-		@include m(focused) {
-			@extend %inputHighlight;
-		}
-
-		@include m(no-results) {
-			background-color: #fafafa;
-			color: #646b6f;
-			cursor: not-allowed;
-		}
-	}
-}
+.autocomplete__wrapper{position:relative}.autocomplete__hint,.autocomplete__input{-webkit-appearance:none;border:2px solid #0b0c0c;border-radius:0;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;margin-bottom:0;width:100%}.autocomplete__input{background-color:transparent;position:relative}.autocomplete__hint{color:#b1b4b6;position:absolute}.autocomplete__input--default{padding:5px}.autocomplete__input--focused{outline:3px solid #fd0;outline-offset:0;box-shadow:inset 0 0 0 2px}.autocomplete__input--show-all-values{padding:5px 34px 5px 5px;cursor:pointer}.autocomplete__dropdown-arrow-down{z-index:-1;display:inline-block;position:absolute;right:8px;width:24px;height:24px;top:10px}.autocomplete__menu{background-color:#fff;border:2px solid #0b0c0c;border-top:0;color:#0b0c0c;margin:0;max-height:342px;overflow-x:hidden;padding:0;width:100%;width:calc(100% - 4px)}.autocomplete__menu--visible{display:block}.autocomplete__menu--hidden{display:none}.autocomplete__menu--overlay{box-shadow:rgba(0,0,0,.256863) 0 2px 6px;left:0;position:absolute;top:100%;z-index:100}.autocomplete__menu--inline{position:relative}.autocomplete__option{border-bottom:solid #b1b4b6;border-width:1px 0;cursor:pointer;display:block;position:relative}.autocomplete__option>*{pointer-events:none}.autocomplete__option:first-of-type{border-top-width:0}.autocomplete__option:last-of-type{border-bottom-width:0}.autocomplete__option--odd{background-color:#fafafa}.autocomplete__option--focused,.autocomplete__option:hover{background-color:#1d70b8;border-color:#1d70b8;color:#fff;outline:0}.autocomplete__option--no-results{background-color:#fafafa;color:#646b6f;cursor:not-allowed}.autocomplete__hint,.autocomplete__input,.autocomplete__option{font-size:16px;line-height:1.25}.autocomplete__hint,.autocomplete__option{padding:5px}@media (min-width:641px){.autocomplete__hint,.autocomplete__input,.autocomplete__option{font-size:19px;line-height:1.31579}}
