--- a/src/ui/component/disciteParts/DisciteModuleProperties.html
+++ b/src/ui/component/disciteParts/DisciteModuleProperties.html
@@ -18,6 +18,6 @@
                 </li>
             {/if}
         </ul>
-        <div class="discite__status"><span class="badge badge--info ">{module.display_state ? $i18n(module.display_state) : ''}</span></div>
+        <div class="discite__status"><span class="badge badge--info ">{module.displayState ? $i18n(module.displayState) : ''}</span></div>
     </div>
 {/if}
