LC-1054 due date and course status on home page and module status on course details page fixed

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -22,8 +22,8 @@
     {/if}
 
     <div class="discite__area">
-        {#if course.nextRequiredBy()}
-            Due by: {$datetime.formatDate(course.nextRequiredBy())}
+        {#if course.nextRequiredByNew()}
+            Due by: {$datetime.formatDate(course.nextRequiredByNew())}
         {:elseif course.getAreasOfWork().length}
             Work area: {course.getAreasOfWork().map(function(aow) { return $i18n('areaOfWork')[aow]}).join(', ')}
         {/if}
